Fix not fitting breadcrumb on small screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,7 +102,6 @@ hr {
 .breadcrumb {
 	font-size: 1rem;
 	font-weight: bold;
-	white-space: nowrap;
 }
 .breadcrumb:not(:last-child)::after {
 	content: '→';
